Page Objects can now be instantiated automatically in JUnit tests, simply by declaring a member variable derived from the PageObject parent class.