@@ -18,6 +18,7 @@ allprojects {
 
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
+    group = 'net.thucydides'
     version = '0.9.280-SNAPSHOT'
 
     repositories {
@@ -34,6 +35,7 @@ allprojects {
         exclude '**/integration/**'
         exclude '**/samples/**'
         exclude '**/*Sample*'
+        jvmArgs '-XX:MaxPermSize=256m'
     }
 
     task integrationTests(type: Test) {
@@ -44,6 +46,7 @@ allprojects {
         include '**/integration/**'
         reports.junitXml.destination = "${buildDir}/reports/integration-tests"
         reports.html.destination = "${buildDir}/reports/integration-tests"
+        jvmArgs '-XX:MaxPermSize=256m'
     }
 
 //    test {
